added reset button

--- a/index.html
+++ b/index.html
@@ -147,10 +147,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <a id="download" onclick="downloadImg(this)">
-                                <button class="meme-generator__button">Download</button>
-                            </a>
-                            <!--<input type="submit" id="enter-text" onclick="return false;">-->
+                            <div class="meme-generator__buttons">
+                                <a id="download" onclick="downloadImg(this)">
+                                    <button class="meme-generator__button">Download</button>
+                                </a>
+                                <button class="meme-generator__button" onclick="resetCanvas()">Reset</button>
+                                <!--<input type="submit" id="enter-text" onclick="return false;">-->
+                            </div>
                         </div>
                     </div>
                 </div>
