--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
     <script src="js/utils.js"></script>
     <script src="js/model.js"></script>
     <script src="js/output.js"></script>
+    <script src="js/generator.js"></script>
     <script src="js/canvas.js"></script>
     <script src="js/main.js"></script>
 </body>
