added fonts menu and changed some margins

--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@
                                         <i class="fa fa-minus" aria-hidden="true"></i>
                                     </button>
                                     </div>
+                                    <!--Font Type-->
+                                    <div class="top-text__generator-font-types">
+                                        <select name="fonts">
+                                            <option value="" disabled selected>Choose Font</option>
+                                            <option value="lato">Lato</option>
+                                            <option value="david">David</option>
+                                            <option value="miriam">Miriam</option>
+                                         </select>
+                                    </div>
                                     <!-- Text Shadow and color -->
                                     <div class="top-text__generator-font-effect">
                                         <input type="color" class="top-text__color" oninput="changeFontColor(this.value , 'top')">
@@ -153,6 +162,15 @@
                                         <button class="bottom-text__decrease-font-size" onclick="changeFontSize(-5 , 'bottom');">
                                         <i class="fa fa-minus" aria-hidden="true"></i>
                                     </button>
+                                    </div>
+                                    <!--Font Type-->
+                                    <div class="bottom-text__generator-font-types">
+                                        <select name="fonts">
+                                            <option value="" disabled selected>Choose Font</option>
+                                            <option value="lato">Lato</option>
+                                            <option value="david">David</option>
+                                            <option value="fiat">Miriam</option>
+                                         </select>
                                     </div>
                                     <!-- Text color and shadow -->
                                     <div class="bottom-text__generator-font-effect">
